# TLlama

./: .gitignore  README.md  TLlama.kdev4  pyproject.toml
docs/: api-compatibility.md  configuration.md  development.md  metadata-cache.md  model-repositories.md  usage.md
src/tllama/: backend.py  config.py  main.py
src/tllama/helpers/: chat.py  common.py  gguf_metadata.py  llama_stats.py  metadata_cache.py  ollama_chat.py  openai_compat.py  prompt_render.py  reasoning_split.py  reasoning_stream.py
src/tllama/lib/: llama_wrap.py
src/tllama/routers/: ollama.py  openai.py
src/tllama/schemas/: ollama.py  openai.py
